src/test/deca/context/valid/objet/instanceof_cont_01Decompiled.deca
class A {
}

{
	A a = new A();
	(a instanceof A);
}
